[gd_scene load_steps=14 format=3 uid="uid://0lyqg2xeq2ni"]

[ext_resource type="Script" path="res://settingsmenu.gd" id="1_sqru2"]
[ext_resource type="Theme" uid="uid://bthoilsoep1wp" path="res://button.tres" id="1_yp5e0"]
[ext_resource type="Texture2D" uid="uid://1obrp7tpsre1" path="res://ui/buttons/normal.png" id="3_mj6xv"]
[ext_resource type="Texture2D" uid="uid://cdpos2c8icy25" path="res://ui/fonts/freecam.png" id="4_c0t43"]
[ext_resource type="Texture2D" uid="uid://wefevwjjdqx4" path="res://ui/fonts/filepath.png" id="4_rwnws"]
[ext_resource type="Texture2D" uid="uid://cyx888w81hrub" path="res://ui/fonts/on.png" id="5_j7sph"]
[ext_resource type="AudioStream" uid="uid://j6tib67mw8or" path="res://sfx/blipSelect.wav" id="6_hktvp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v63e1"]
texture = ExtResource("3_mj6xv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7te4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iryac"]

[sub_resource type="Animation" id="Animation_n0w4l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("freecam:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_oqcbx"]
resource_name = "freecam"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("freecam:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(0.148651, 0.0457527, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gad0d"]
_data = {
"RESET": SubResource("Animation_n0w4l"),
"freecam": SubResource("Animation_oqcbx")
}

[node name="settings" type="Node2D"]
script = ExtResource("1_sqru2")

[node name="Button" type="Button" parent="."]
offset_left = 357.0
offset_right = 1257.0
offset_bottom = 900.0
focus_mode = 0
theme = ExtResource("1_yp5e0")
theme_override_styles/hover = SubResource("StyleBoxTexture_v63e1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_v63e1")

[node name="Filepath" type="Button" parent="."]
offset_left = 435.0
offset_top = 173.0
offset_right = 895.0
offset_bottom = 285.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d7te4")
icon = ExtResource("4_rwnws")

[node name="freecam" type="Button" parent="."]
offset_left = 435.0
offset_top = 69.0
offset_right = 773.0
offset_bottom = 181.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d7te4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d7te4")
icon = ExtResource("4_c0t43")

[node name="off_on" type="Button" parent="freecam"]
show_behind_parent = true
layout_mode = 0
offset_left = 250.0
offset_top = -2.0
offset_right = 338.0
offset_bottom = 110.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_iryac")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iryac")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iryac")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iryac")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iryac")
icon = ExtResource("5_j7sph")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(800, 450)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gad0d")
}

[node name="blip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hktvp")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(0, 36)
size = Vector2i(1400, 850)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("folder")

[connection signal="pressed" from="Filepath" to="." method="_on_filepath_pressed"]
[connection signal="pressed" from="freecam" to="." method="_on_freecam_pressed"]
[connection signal="pressed" from="freecam/off_on" to="." method="_on_freecam_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
